test/parser/should_fail/comments.souc.bad
import modu

main() = do
	x <- ; bad place for a comment
	print x
